--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="hero">
+        <div class="header-box">
             <h1 class="top-title">Elden Ring</h1>
 
 
@@ -26,18 +26,39 @@
     <main>
         <div class="card-container">
             <div class="card">
-              <img src="./bosses.webp" alt="BOSSES" class="card-img-boss">
+              <img src="./Marika.webp" alt="STORY" class="card-img">
               <div class="card-text">
-                <h1 class="card-title">BOSSES</h1>
-                <p class="card-description">Main BOSSES IN ELDEN RING.</p>
-                <a href="./bosses.html" class="card-link">BOSSES</a>
+                <h1 class="card-title">STORY</h1>
+                <p class="card-description">THE STORY OF ELDEN RING</p>
+                <a href="./bosses.html" class="card-link">STORY</a>
               </div>
+        </div>
+
+            <div class="card-container">
+                <div class="card">
+                  <img src="./bosses.webp" alt="BOSSES" class="card-img">
+                  <div class="card-text">
+                    <h1 class="card-title">BOSSES</h1>
+                    <p class="card-description">Main BOSSES IN ELDEN RING.</p>
+                    <a href="./bosses.html" class="card-link">BOSSES</a>
+                  </div>
             </div>
+
+                <div class="card-container">
+                    <div class="card">
+                      <img src="./features.jpg" alt="" class="card-img">
+                      <div class="card-text">
+                        <h1 class="card-title">Features</h1>
+                        <p class="card-description">FEATURES OF THE GAME WILL BE IN HERE</p>
+                        <a href="./bosses.html" class="card-link">FEATURES</a>
+                      </div>
+                </div>
 
     </main>
 
     <footer>
-
+        <h1 class="contact">CONTACT US</h1>
+    &copy; @GracefulTarnished123@hotmail.com
     </footer>
     
 </body>
