made the boss page
the boss page has been finished and now i just got feedback from someone on it.

--- a/bosses.html
+++ b/bosses.html
@@ -1,13 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="bosses.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Junge&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Junge&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
-    
-    
+    <header>
+        <div class="header-box junge-regular">
+            <h1 class="top-title">BOSSES</h1>
+
+
+    </header>
+
+    <nav>
+        <ul class="navbar junge-regular">
+            <li><a href="./index.html" class="nav-link">HOME</a></li>
+    </nav>
+
+
+    <main>
+        <h2 class="Boss-title junge-regular">Main Bosses</h2>
+        <div class="cards">
+            <div class="card-container junge-regular">
+                <div class="card" alt="">
+                    <img src="../margit2.webp" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Margit</h1>
+                        <p class="card-description">Margit, the Fell Omen is a Great Enemy Boss in Elden Ring. This is an
+                            optional boss as players don't need to defeat him to advance in Elden Ring, though they do need
+                            to defeat Margit to advance to Stormveil Castle.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container junge-regular">
+                <div class="card">
+                    <img src="../godrick.jpg" alt="" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Godrick</h1>
+                        <p class="card-description">Godrick the Grafted, also known as Godrick the Golden, is a Demigod
+                            Boss in Elden Ring.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container junge-regular">
+                <div class="card">
+                    <img src="../renalla.webp" alt="" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Rennala</h1>
+                        <p class="card-description">Rennala, Queen of the Full Moon is a Legend Boss in Elden Ring.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container junge-regular">
+                <div class="card">
+                    <img src="../radahn.webp" alt="" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Radahn</h1>
+                        <p class="card-description">Starscourge Radahn is a Legend Boss in Elden Ring.
+                            Starscourge Radahn is heralded as one of the mightiest living demigods.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container junge-regular">
+                <div class="card">
+                    <img src="../rykard.webp" alt="" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Rykard</h1>
+                        <p class="card-description">God-Devouring Serpent and Rykard, Lord of Blasphemy is a
+                            two-phase Demigod Boss in Elden Ring. The God-Devouring Serpent is a massive
+                            coiled serpent found at the Volcano Manor.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container junge-regular">
+                <div class="card">
+                    <img src="../draco.jpg" alt="" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Draconic Tree Sentinel</h1>
+                        <p class="card-description">Draconic Tree Sentinel is an overworld Boss in Elden
+                            Ring. Draconic Tree Sentinel is a massive knight clad in golden armor that
+                            rides a massive horse and wields draconic magic.</p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="card-container junge-regular">
+                <div class="card">
+                    <img src="../morgot.webp" alt="" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Morgot</h1>
+                        <p class="card-description">Morgott, The Omen King, also known as Morgott
+                            the Grace Given, is a Demigod Boss in Elden Ring.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container junge-regular">
+                <div class="card">
+                    <img src="../godskin.webp" alt="" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Godskin Duo</h1>
+                        <p class="card-description">Godskin Duo is a Boss in Elden Ring. In this
+                            dual boss fight, you'll have to fight against a Godskin Apostle and
+                            a Godskin Noble simultaneously, as each one resurrects the other.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container junge-regular">
+                <div class="card">
+                    <img src="../maliketh.webp" alt="" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Maliketh</h1>
+                        <p class="card-description">Beast Clergyman and Maliketh, The Black
+                            Blade is a two-phase Legend Boss in Elden Ring. Gurranq, Beast
+                            Clergyman is found at the end of Crumbling Farum Azula and is
+                            revealed to be Maliketh, the Black Blade.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container junge-regular">
+                <div class="card">
+                    <img src="../radagon.webp" alt="" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Radagon</h1>
+                        <p class="card-description">Radagon of the Golden Order is a
+                            Boss in Elden Ring. Radagon is a tall, fractured god
+                            wielding the hammer that shattered the Elden Ring, and is
+                            found in the heart of the Erdtree.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container junge-regular">
+                <div class="card">
+                    <img src="../beast.webp" alt="" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Elden Beast</h1>
+                        <p class="card-description">Elden Beast is a Boss in Elden
+                            Ring. Elden Beast is the true form of the Elden Ring,
+                            acting as the vassal of the Greater Will, and is found
+                            in the Elden Throne.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container junge-regular">
+                <div class="card">
+                    <img src="../mog.webp" alt="" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Mohg</h1>
+                        <p class="card-description">Mohg, Lord of Blood is a
+                            Demigod Boss in Elden Ring. Unlike his twin Morgott,
+                            Mohg fully embraced his accursed Omen blood.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container junge-regular">
+                <div class="card">
+                    <img src="../malenia.webp" alt="" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Malenia</h1>
+                        <p class="card-description">Malenia, Blade of
+                            Miquella and Malenia, Goddess of Rot is a
+                            two-phase Demigod Boss in Elden Ring. She is the
+                            twin sister of Miquella and gained renown for
+                            her legendary battle against Starscourge Radahn.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container junge-regular">
+                <div class="card">
+                    <img src="../astel.webp" alt="" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Astel </h1>
+                        <p class="card-description">Astel, Naturalborn
+                            of the Void is encountered in a cavern
+                            beyond the Lake of Rot, accessed via a
+                            coffin in the Grand Cloister.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-container junge-regular">
+                <div class="card">
+                    <img src="../dragon.webp" alt="" class="card-img">
+                    <div class="card-text">
+                        <h1 class="card-title">Placidusax </h1>
+                        <p class="card-description">Dragonlord
+                            Placidusax is a Legend Boss in Elden
+                            Ring. This massive, two-headed dragon is
+                            found in Crumbling Farum Azula. He
+                            reigned as the current Elden Lord at
+                            some time before the reign of Marika.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
