--- a/bosses.html
+++ b/bosses.html
@@ -38,8 +38,10 @@
                     <img src="../margit2.webp" class="card-img">
                     <div class="card-text">
                         <h1 class="card-title">Margit</h1>
-                        <p class="card-description">Margit, the Fell Omen is a Great Enemy Boss in Elden Ring. This is an
-                            optional boss as players don't need to defeat him to advance in Elden Ring, though they do need
+                        <p class="card-description">Margit, the Fell Omen is a Great Enemy Boss in Elden Ring. This is
+                            an
+                            optional boss as players don't need to defeat him to advance in Elden Ring, though they do
+                            need
                             to defeat Margit to advance to Stormveil Castle.</p>
                     </div>
                 </div>
